--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".ResetPassword">
@@ -38,16 +39,28 @@
         android:layout_gravity="center"
         android:src="@drawable/overwatch_logo_second"/>
 
-    <EditText
-        android:id="@+id/reset_editTexView"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/overwatch_orange"
+        app:hintTextColor="@color/overwatch_orange"
         android:layout_marginTop="100dp"
-        android:hint="@string/email_address"
-        android:importantForAutofill="no"
         android:minHeight="48dp"
-        android:textColorHint="#546E7A"
-        android:inputType="textEmailAddress"/>
+        >
+
+        <EditText
+            android:id="@+id/reset_editTexView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:hint="@string/email_address"
+            android:importantForAutofill="no"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textColorHint="#546E7A"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/reset_button"
