--- a/app/src/main/res/layout/log_in_activity.xml
+++ b/app/src/main/res/layout/log_in_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".LogInUser">
@@ -37,27 +38,53 @@
         android:layout_gravity="center"
         android:src="@drawable/overwatch_logo_second"/>
 
-    <EditText
-        android:id="@+id/enter_email"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/enterEmail_textInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/overwatch_orange"
+        app:hintTextColor="@color/overwatch_orange"
         android:layout_marginTop="75dp"
-        android:hint="@string/email_address"
-        android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        android:textColorHint="#546E7A" />
+        >
 
-    <EditText
-        android:id="@+id/enter_password"
+        <EditText
+            android:id="@+id/enter_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:hint="@string/email_address"
+            android:importantForAutofill="no"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textColorHint="#546E7A"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_TextInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        android:hint="@string/password"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        android:textColorHint="#546E7A" />
+        android:textColorHint="@color/overwatch_orange"
+        app:hintTextColor="@color/overwatch_orange"
+        >
+
+        <EditText
+            android:id="@+id/enter_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            android:textColorHint="#546E7A"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 
     <Button
