--- a/app/src/main/res/layout/loser_activity.xml
+++ b/app/src/main/res/layout/loser_activity.xml
@@ -46,7 +46,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <Button
         android:id="@+id/return_button"
         android:layout_width="wrap_content"
@@ -55,10 +54,8 @@
         android:text="Return Home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lose_prompt"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/lose_prompt" />
 
     <ImageView
         android:id="@+id/playerimg_lose"
