--- a/app/src/main/res/layout/moves.xml
+++ b/app/src/main/res/layout/moves.xml
@@ -13,64 +13,44 @@
 
     <TextView
         android:id="@+id/player_name_moves"
-        android:layout_width="wrap_content"
+        android:layout_width="241dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="My Hero Name"
-        app:layout_constraintBottom_toTopOf="@+id/button_first_attack"
+        android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_image_moves"
-        app:layout_constraintVertical_bias="0.302" />
-
-    <TextView
-        android:id="@+id/textView_My_Hero_HP2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HP"
-        app:layout_constraintBottom_toTopOf="@id/button_first_attack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_name_moves" />
-
-    <TextView
-        android:id="@+id/textView_My_Hero_MP2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MP"
-        app:layout_constraintBottom_toTopOf="@id/button_first_attack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_My_Hero_HP2" />
+        app:layout_constraintTop_toBottomOf="@+id/player_image_moves" />
 
     <Button
         android:id="@+id/button_first_attack"
+        style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:onClick="move1"
         android:text="@string/move1"
-        style="@style/MyButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.405" />
+        app:layout_constraintTop_toBottomOf="@+id/player_name_moves"
+        app:layout_constraintVertical_bias="0.046" />
 
     <Button
         android:id="@+id/button_second_attack"
         style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="240dp"
         android:text="@string/move2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.482" />
+        app:layout_constraintTop_toBottomOf="@+id/button_first_attack"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button_third_attack"
@@ -81,15 +61,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.557" />
+        app:layout_constraintTop_toBottomOf="@+id/button_second_attack" />
 
     <TextView
         android:id="@+id/textView_Move"
-        android:layout_width="149dp"
-        android:layout_height="23dp"
+        android:layout_width="247dp"
+        android:layout_height="31dp"
         android:layout_marginTop="72dp"
         android:text="Pick your move:"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -98,7 +78,7 @@
         android:id="@+id/player_image_moves"
         android:layout_width="247dp"
         android:layout_height="155dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_Move"
