--- a/app/src/main/res/layout/register_user_activity.xml
+++ b/app/src/main/res/layout/register_user_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".RegisterUser">
@@ -38,37 +39,70 @@
         android:layout_gravity="center"
         android:src="@drawable/overwatch_logo_second"/>
 
-    <EditText
-        android:id="@+id/register_fullName_textView"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/overwatch_orange"
+        app:hintTextColor="@color/overwatch_orange"
         android:layout_marginTop="35dp"
-        android:hint="@string/full_name"
         android:minHeight="48dp"
-        android:importantForAutofill="no"
-        android:inputType="text" />
+        >
+
+        <EditText
+            android:id="@+id/register_fullName_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:hint="@string/full_name"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColorHint="@color/overwatch_orange"
+        app:hintTextColor="@color/overwatch_orange"
+        android:layout_marginTop="30dp"
+        android:minHeight="48dp"
+        >
+
+        <EditText
+            android:id="@+id/register_email_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="@string/email_address"
+            android:importantForAutofill="no"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:textColorHint="#546E7A"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <EditText
-        android:id="@+id/register_email_textView"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:hint="@string/email_address"
-        android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        android:textColorHint="#546E7A" />
+        android:textColorHint="@color/overwatch_orange"
+        app:hintTextColor="@color/overwatch_orange"
+        android:minHeight="48dp">
 
-    <EditText
-        android:id="@+id/register_password_textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="@string/password"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:minHeight="48dp"/>
+        <EditText
+            android:id="@+id/register_password_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <Button
         android:id="@+id/register_button"
@@ -80,7 +114,9 @@
         android:background="@color/overwatch_orange"
         />
 
-    <LinearLayout
+
+
+<LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,6 +139,7 @@
                 android:text="@string/login"
                 android:textStyle="bold"
                 android:textSize="18sp"
+                android:textColor="@color/overwatch_orange"
                 android:layout_marginStart="10dp"
                 />
     </LinearLayout>
